# scoutkat

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/.venv311/: pyvenv.cfg
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  container.py
backend/app/jobs/: run_cycle.py  run_hourly_digest.py  run_trade_executor.py  scheduler.py  tasks.py
backend/app/models/: enums.py
backend/app/prompts/: grok_system.txt  grok_user.txt
backend/app/providers/: base.py  grok_provider.py  hyperliquid_provider.py  hyperliquid_trade_provider.py  telegram_provider.py
backend/app/repositories/: fixtures.py  hourly_digest_repository.py  notification_repository.py  score_repository.py  signal_recorder_repository.py  signal_repository.py  snapshot_repository.py  supabase_client.py  token_repository.py  trade_repository.py  user_repository.py  watchlist_repository.py  x_attention_repository.py
backend/app/schemas/: common.py  explanations.py  grok.py  health.py  signal.py  token.py  token_context.py  user.py  watchlist.py  watchtower.py
backend/app/scoring/: config.py  engine.py  normalization.py  thresholds.json  weights.json
backend/app/services/: cache_service.py  explanation_service.py  hourly_digest_service.py  market_ingestion_service.py  notification_service.py  scoring_pipeline_service.py  signal_detection_service.py  signal_pipeline_service.py  signal_recorder_service.py  signal_service.py  token_service.py  trade_executor_service.py  (+2 more)
backend/scoutkat_backend.egg-info/: SOURCES.txt  requires.txt
(+65 files in other folders)
