[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutkat-backend"
version = "0.1.0"
description = "Scoutkat MVP backend"
requires-python = ">=3.11"
dependencies = [
  "APScheduler>=3.10.4",
  "fastapi>=0.115.0",
  "hyperliquid-python-sdk>=0.22.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.8",
  "supabase>=2.7.4",
  "uvicorn[standard]>=0.30.6",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
